refactor: convert get all products stream from collecters.list to toList method